# drf-excel

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: test.yml
drf_excel/: fields.py  mixins.py  renderers.py  utilities.py
drf_renderer_xlsx/: fields.py  mixins.py  renderers.py
tests/: conftest.py  settings.py  test_fields.py  test_renderers.py  test_utilities.py  test_viewset_mixin.py  urls.py
tests/testapp/: apps.py  models.py  serializers.py  views.py
